[package]
name = "too"
version = "0.1.0"
authors = ["Shota Nakagawa"]
edition = "2021"
rust-version = "1.57"
license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/ns6251/too/"

[dependencies]
clap = { version = "3.0", features = ["derive"]}
futures = "0.3"
regex = "1.5"
tokio = { version = "1.15", features = ["full"]}
